@@ -6,6 +6,7 @@ ActiveRecord::Schema.define(:version => 0) do
     t.column :lft, :integer
     t.column :rgt, :integer
     t.column :depth, :integer
+    t.column :draft, :boolean, default: false
   end
 
   create_table :categories, :force => true do |t|
