@@ -1,3 +1,5 @@
+* Ensure that nested_set queries respect the model's default_scope. [oesgalha](https://github.com/oesgalha)
+
 3.0.2
 * Fix `dependent: :restrict_with_exception` not allowing a delete to occur. [Brendan Kilfoil]
 * Replace `Arel::SelectManager#join_sql` with `Arel::SelectManager#join_sources` as `Arel::Node#joins` accepts AST as well. [Swanand Pagnis]
